   * Fix huge fonts on storyscreens with tiny GUI
   * Fix cmake po-update not doing line wrapping properly
   * Fix bug #14241 (mp campaign timer settings not carried over to 
     next scenario)
   * Started with the a new event handler for gui2
   * Fix unit facings after moving (bug #14336)
   * Improved the teamcoloring script for images.

Version 1.7.5:
 * Campaigns:
   * Legend of Wesmere
     * Scenario 21 redesigned
 * Graphics:
   * New base frame and animations for the Drake Blademaster.
 * Language and i18n:
   * Setup for tracking localized images.
   * Updated translations: Chinese (Traditional), Lithuanian, Serbian.
 * Units:
   * Fixed problems with the Drakes introduced in 1.7.4 (wrong resistances and
     a possible crash when advancing to the Inferno Drake)
 * Miscellaneous and bugfixes:
   * Optimized the cmake building if both game and tests are enabled
   * Switched to new stats upload mechanism so that stats.wesnoth.org should
     soon provide usefull data
   * Optimize pathfinding on 1MP terrains.

Version 1.7.4:
 * AI:
   * Formula AI debugger (uses -new-widgets)
   * New 'debug()' formula function
   * Fixed crashes and infinite loops on AI turn
 * Animations
   * Movement have the number of steps done in value and the number of step left
     in value_second, this allows take-off and landing animations
 * Campaigns
   * Legend of Wesmere
     * Scenario 3 redesigned
     * Fixed wrong or unclear scenario objectives
     * Scenario 16: Reduced the number of wolf riders
 * Editor
   * Better support for conflicting terrain letters across add-ons, now
     in the event of a conflict the terrain will appear in all terrain
     groups as opposed to appearing in one of them multiple times.
   * Added remembering of the show terrain codes and coordinates options
 * Graphics:
   * New portraits for Ancient Wose, Ruffian, Master-at-arms, Naga
     Warrior/Myrmidon, Grand Knight, Merman Hunter.